Updating the order logic flow V2
